--- a/example1/build.xml
+++ b/example1/build.xml
@@ -20,6 +20,14 @@
         <javac srcdir="${source.dir}" destdir="${build.dir}"/>
     </target>
 
+    <target name="jar" depends="compile">
+        <jar destfile="Hello.jar" basedir="${build.dir}">
+            <manifest>
+                <attribute name="Main-Class" value="ex.Hello"/>
+            </manifest>
+        </jar>
+    </target>
+
     <!-- Generate javadocs for current project into ${doc.dir} -->
     <target name="doc" depends="init" description="generate documentation">
         <javadoc sourcepath="${source.dir}" destdir="${doc.dir}"/>
