--- a/example1/build.xml
+++ b/example1/build.xml
@@ -5,14 +5,16 @@
     </description>
 
     <!-- global properties for this build file -->
-    <property name="source.dir" location="src"/>
+    <property name="source.dir" location=""/>
     <property name="build.dir" location="bin"/>
     <property name="doc.dir" location="doc"/>
+    <property name="jar.dir" location="jar"/>
 
     <!-- set up some directories used by this project -->
     <target name="init" description="setup project directories">
         <mkdir dir="${build.dir}"/>
         <mkdir dir="${doc.dir}"/>
+        <mkdir dir="${jar.dir}"/>
     </target>
 
     <!-- Compile the java code in ${src.dir} into ${build.dir} -->
@@ -25,10 +27,22 @@
         <javadoc sourcepath="${source.dir}" destdir="${doc.dir}"/>
     </target>
 
+    <!-- Create JAR for current project into ${jar.dir} -->
+    <target name="jar" depends="compile" description="create jar file">
+        <jar destfile="${jar.dir}/sampleProject.jar">
+            <fileset dir="${build.dir}"/>
+            <manifest>
+                <attribute name="Main-Class"
+                           value="ex.Hello"/>
+            </manifest>
+        </jar>
+    </target>
+
     <!-- Delete the build & doc directories and Emacs backup (*~) files -->
     <target name="clean" description="tidy up the workspace">
         <delete dir="${build.dir}"/>
         <delete dir="${doc.dir}"/>
+        <delete dir="${jar.dir}"/>
         <delete>
             <fileset defaultexcludes="no" dir="${source.dir}" includes="**/*~"/>
         </delete>
