--- a/example3/pom.xml
+++ b/example3/pom.xml
@@ -5,5 +5,30 @@
     <modelVersion>4.0.0</modelVersion>
 
     <!-- TODO: WRITE HERE -->
+    <groupId>maven-examples</groupId>
+    <artifactId>example3</artifactId>
+    <version>1.0-SNAPSHOT</version>
+    <dependencies>
+
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.9</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-compress</artifactId>
+            <version>1.9</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.tukaani</groupId>
+            <artifactId>xz</artifactId>
+            <version>1.5</version>
+        </dependency>
+
+
+    </dependencies>
 
 </project>
