--- a/example1/build.xml
+++ b/example1/build.xml
@@ -33,5 +33,14 @@
             <fileset defaultexcludes="no" dir="${source.dir}" includes="**/*~"/>
         </delete>
     </target>
-
+    <target name="jar" description="make jar" depends="compile">
+        <jar destfile="bin/Ant.jar">
+            <fileset dir="bin">
+                <include name="*.class"/>
+            </fileset>
+            <manifest>
+                <attribute name="Main-Class" value="Hello ANT!"/>
+            </manifest>
+        </jar>
+    </target>	
 </project>
