--- a/example1/build.xml
+++ b/example1/build.xml
@@ -8,11 +8,13 @@
     <property name="source.dir" location="src"/>
     <property name="build.dir" location="bin"/>
     <property name="doc.dir" location="doc"/>
+	<property name="library.dir" location="lib"/>
 
     <!-- set up some directories used by this project -->
     <target name="init" description="setup project directories">
         <mkdir dir="${build.dir}"/>
         <mkdir dir="${doc.dir}"/>
+		<mkdir dir="${library.dir}"/>
     </target>
 
     <!-- Compile the java code in ${src.dir} into ${build.dir} -->
@@ -29,9 +31,22 @@
     <target name="clean" description="tidy up the workspace">
         <delete dir="${build.dir}"/>
         <delete dir="${doc.dir}"/>
+		<delete dir="${library.dir}"/>
         <delete>
             <fileset defaultexcludes="no" dir="${source.dir}" includes="**/*~"/>
         </delete>
     </target>
+    
+    <!-- Build jar file into ${library.dir}	-->
+    <target name="build" depends="compile" description="make jar file">
+		<jar destfile="lib/Ant.jar"> 
+			<fileset dir="bin"> 
+				<include name="*.class"/> 
+			</fileset> 
+			<manifest> 
+				<attribute name="Main-Class" value="Hello"/> 
+			</manifest> 
+		</jar>
+	</target>
 
 </project>
