--- a/example2/pom.xml
+++ b/example2/pom.xml
@@ -3,10 +3,25 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
-    <groupId>maven-examples</groupId>
-    <artifactId>example2</artifactId>
+    
+    <groupId>Task6.2</groupId>
+    <artifactId>Task6.2</artifactId>
     <version>1.0-SNAPSHOT</version>
-
-
+    <dependencies>
+         <dependency>
+                  <groupId>commons-codec</groupId>
+                  <artifactId>commons-codec</artifactId>
+                  <version>1.9</version>
+         </dependency>
+         <dependency>
+                  <groupId>org.apache.commons</groupId>
+                  <artifactId>commons-compress</artifactId>
+                  <version>1.9</version>
+         </dependency>
+         <dependency>
+                  <groupId>junit</groupId>
+                  <artifactId>junit</artifactId>
+                  <version>4.12</version>
+         </dependency>
+    </dependencies>
 </project>
