--- a/example1/build.xml
+++ b/example1/build.xml
@@ -33,5 +33,14 @@
             <fileset defaultexcludes="no" dir="${source.dir}" includes="**/*~"/>
         </delete>
     </target>
+	
+	<target name="makejar" depends="compile" description="Make jar file">
+        <jar destfile="${build.dir}/launch.jar" basedir="${build.dir}">
+            <manifest>
+                <attribute name="Main-Class" value="ex.Hello"/>
+            </manifest>
+		</jar>
+    </target>
+	
 
 </project>
