--- a/example3/pom.xml
+++ b/example3/pom.xml
@@ -5,5 +5,29 @@
     <modelVersion>4.0.0</modelVersion>
 
     <!-- TODO: WRITE HERE -->
+    <groupId>laboratory6</groupId>
+    <artifactId>lab6</artifactId>
+    <version>1.0-SNAPSHOT</version>
 
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-compress -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-compress</artifactId>
+            <version>1.9</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.10</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.tukaani</groupId>
+            <artifactId>xz</artifactId>
+            <version>1.5</version>
+        </dependency>
+    </dependencies>
 </project>
