--- a/example1/build.xml
+++ b/example1/build.xml
@@ -1,4 +1,4 @@
-<project name="Sample Project" default="compile" basedir=".">
+<project name="Sample Project" default="make_jar" basedir=".">
 
     <description>
         A sample build file for this project
@@ -17,7 +17,18 @@
 
     <!-- Compile the java code in ${src.dir} into ${build.dir} -->
     <target name="compile" depends="init" description="compile java sources">
-        <javac srcdir="${source.dir}" destdir="${build.dir}"/>
+        <javac srcdir="${source.dir}" includeantruntime="true" destdir="${build.dir}"/>
+    </target>
+
+    <target name="make_jar" description="make jar file" depends="compile">
+        <jar destfile="bin/Ant.jar">
+            <fileset dir="bin">
+                <include name="**/*.class"/>
+            </fileset>
+            <manifest>
+                <attribute name="Main-Class" value="Hello"/>
+            </manifest>
+            </jar>
     </target>
 
     <!-- Generate javadocs for current project into ${doc.dir} -->
