--- a/example1/build.xml
+++ b/example1/build.xml
@@ -8,11 +8,13 @@
     <property name="source.dir" location="src"/>
     <property name="build.dir" location="bin"/>
     <property name="doc.dir" location="doc"/>
+    <property name="jar.dir" location="lib"/>
 
     <!-- set up some directories used by this project -->
     <target name="init" description="setup project directories">
         <mkdir dir="${build.dir}"/>
         <mkdir dir="${doc.dir}"/>
+        <mkdir dir="${jar.dir}"/>
     </target>
 
     <!-- Compile the java code in ${src.dir} into ${build.dir} -->
@@ -29,9 +31,18 @@
     <target name="clean" description="tidy up the workspace">
         <delete dir="${build.dir}"/>
         <delete dir="${doc.dir}"/>
+        <delete dir="${jar.dir}"/>
         <delete>
             <fileset defaultexcludes="no" dir="${source.dir}" includes="**/*~"/>
         </delete>
     </target>
-
+    
+    <target name="jar" depends="compile">
+        <jar destfile="${jar.dir}/app.jar" basedir="${build.dir}">
+            <manifest>
+                <attribute name="Main-Class" value="Hello"/>
+            </manifest>
+        </jar>
+    </target>
+    
 </project>
