--- a/example1/build.xml
+++ b/example1/build.xml
@@ -8,16 +8,27 @@
     <property name="source.dir" location="src"/>
     <property name="build.dir" location="bin"/>
     <property name="doc.dir" location="doc"/>
+    <property name="jar.dir"  location="lib"/>
 
     <!-- set up some directories used by this project -->
     <target name="init" description="setup project directories">
         <mkdir dir="${build.dir}"/>
         <mkdir dir="${doc.dir}"/>
+	<mkdir dir="${jar.dir}"/>
     </target>
 
     <!-- Compile the java code in ${src.dir} into ${build.dir} -->
     <target name="compile" depends="init" description="compile java sources">
         <javac srcdir="${source.dir}" destdir="${build.dir}"/>
+    </target>
+
+
+    <target name="java" description="make jar" depends="compile">
+        <jar destfile="${jar.dir}/Hello.jar" basedir="${build.dir}">
+            <manifest>
+                <attribute name="Main-Class" value="Hello"/>
+            </manifest>
+	</jar>
     </target>
 
     <!-- Generate javadocs for current project into ${doc.dir} -->
