--- a/example3/pom.xml
+++ b/example3/pom.xml
@@ -3,7 +3,31 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <groupId>example3</groupId>
+    <artifactId>example</artifactId>
+    <version>1.0</version>
 
-    <!-- TODO: WRITE HERE -->
+
+    <dependencies>
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.9</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-compress</artifactId>
+            <version>1.9</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.tukaani</groupId>
+       	    <artifactId>xz</artifactId>
+       		<version>1.5</version>
+        </dependency>
+    </dependencies>
 
 </project>
+
+
