--- a/example1/build.xml
+++ b/example1/build.xml
@@ -20,6 +20,18 @@
         <javac srcdir="${source.dir}" destdir="${build.dir}"/>
     </target>
 
+    <target name="jar" depends="compile" description="create a Jar file for the application">
+        <jar destfile="hello.jar">
+            <fileset dir="bin" includes="*.class"/>
+
+            <manifest>
+                <attribute name="Main-Class" value="Hello"/>
+            </manifest>
+        </jar>
+    </target>
+
+
+
     <!-- Generate javadocs for current project into ${doc.dir} -->
     <target name="doc" depends="init" description="generate documentation">
         <javadoc sourcepath="${source.dir}" destdir="${doc.dir}"/>
