--- a/example1/build.xml
+++ b/example1/build.xml
@@ -20,17 +20,16 @@
         <javac srcdir="${source.dir}" destdir="${build.dir}"/>
     </target>
 
-    <target name="jar" depends="compile" description="create a Jar file for the application">
-        <jar destfile="hello.jar">
+    <target name="jar" depends="compile">
+        <jar destfile="file.jar">
             <fileset dir="bin" includes="*.class"/>
 
             <manifest>
                 <attribute name="Main-Class" value="Hello"/>
+                <attribute name="Class-Path" value="file.jar bin\ex\"/>
             </manifest>
         </jar>
     </target>
-
-
 
     <!-- Generate javadocs for current project into ${doc.dir} -->
     <target name="doc" depends="init" description="generate documentation">
