--- a/example1/build.xml
+++ b/example1/build.xml
@@ -8,11 +8,13 @@
     <property name="source.dir" location="src"/>
     <property name="build.dir" location="bin"/>
     <property name="doc.dir" location="doc"/>
+    <property name="jar.dir"  location="lib"/>
 
     <!-- set up some directories used by this project -->
     <target name="init" description="setup project directories">
         <mkdir dir="${build.dir}"/>
         <mkdir dir="${doc.dir}"/>
+        <mkdir dir="${jar.dir}"/>
     </target>
 
     <!-- Compile the java code in ${src.dir} into ${build.dir} -->
@@ -32,6 +34,14 @@
         <delete>
             <fileset defaultexcludes="no" dir="${source.dir}" includes="**/*~"/>
         </delete>
+    </target>
+	
+	<target name="java" description="make jar file" depends="compile">
+        <jar destfile="${jar.dir}/Hello.jar" basedir="${build.dir}">
+            <manifest>
+                <attribute name="Main-Class" value="Hello"/>
+            </manifest>
+        </jar>
     </target>
 
 </project>
